--- a/src/static/config.html
+++ b/src/static/config.html
@@ -400,7 +400,7 @@
         </div>
 
         <div class="navigation">
-            <a href="/static/index.html" class="nav-link">← Back to Main Dashboard</a>
+            <a href="/index.html" class="nav-link">← Back to Main Dashboard</a>
         </div>
 
         <div class="card">
